# taskmana_mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  SKILL.md  api.py  audit.py  auth.py  cli.py  database.py  docker-compose.dev.yml  docker-compose.yml  main.py  mcp_serve.py  model.py  pyproject.toml  service.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js
