[project]
name = "taskmana-mvp"
version = "0.1.0"
description = "Graph-based task management — tasks are nodes, links are edges."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.30.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
]
